--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "scss": "node-sass src/style.scss dist/style.css -w"
+    "scss": "node-sass src/style.scss public/style.css -w"
   }
 }
